infrastructure/weave-gitops/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitops-httproute
  namespace: flux-system
spec:
  parentRefs:
  - name: traefik
    sectionName: web
    namespace: traefik
  hostnames:
  - gitops.kube.slc.net
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
