infrastructure/weave-gitops/httpsroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitops-httpsroute
  namespace: flux-system
  labels:
    gateway: traefik-gateway
spec:
  parentRefs:
  - name: traefik-gateway
    sectionName: websecure
    namespace: traefik
  hostnames:
  - gitops.apps.slc.net
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: ww-gitops-weave-gitops
      port: 9001
